# Oblivira

./: .gitignore  CMakeLists.txt  Makefile  README.md  buildenv.mk  sgx_t.mk
.cache/clangd/index/: Block.cpp.7963F7B7E747FF13.idx  Block.hpp.D830C15477DC9D51.idx  Bucket.cpp.A53BC1CC3DC3B60A.idx  Bucket.hpp.FFA4C2FBEC54153F.idx  DID_Map.cpp.E692C4C69FC3B298.idx  DID_Map.hpp.DEA8571611FA8D59.idx  Enclave.cpp.2ADE3277BB74DC3D.idx  ORAMTree.cpp.31EE120450685DCA.idx  ORAMTree.hpp.C4D25D40F2A32AC4.idx  ORAM_Interface.hpp.AE51C72E109AAB95.idx  Oblivira_v2.cpp.AC4612A234E5AF9D.idx  PathORAM.cpp.88B63F7C4F2A887B.idx  PathORAM.hpp.523923C1D5AFDA9B.idx  SafeQueue.h.142CAB1CE13EA71C.idx  ServiceServer.cpp.E2AC7724BA0AFA94.idx  ServiceServer.h.2FFE03972C458FCE.idx  Stash.cpp.6A57B516D2E5A5D6.idx  Stash.hpp.6F64D79D267FCEF7.idx  ThreadPool.h.B5D662B6F130B59C.idx  benchmark.h.E76BAFECA7E16456.idx  certs_test.h.890412F0B979B3F1.idx  debug.h.14E43009C597D6FE.idx  global_config.h.E2064103AA445B3F.idx  json.h.E4C36E0B79F3E34B.idx  jsoncpp.cpp.A867FF2716CAFECE.idx  localstorage.cpp.832F6F5CCB460551.idx  localstorage.h.B0EBD2D523588144.idx  memory.h.D44FBAAECDB69FDC.idx  oasm_lib.h.4132E4B6465F84BB.idx  ocalls.cpp.3899320831C6F158.idx  oram_utils.cpp.F22D86B4E308D7DC.idx  oram_utils.hpp.802118DA91535599.idx  settings.h.E87AFCB0D62C9F8D.idx  sgx_init.cpp.7BBC543E353C488A.idx  sgx_init.h.B73DC0C9EF2728B0.idx  ssl.cpp.E93E755AAA253792.idx  ssl.h.57DF912980D8BADE.idx  ssl.h.678C969C9E343F91.idx  test.h.A7433170A55C1430.idx  types.h.5290BD9967C49336.idx  (+6 more)
.clangd/index/: Block.cpp.7963F7B7E747FF13.idx  Block.cpp.EC0C5C5CF051ED5D.idx  Block.hpp.D61B2271B6AD0FC6.idx  Block.hpp.D830C15477DC9D51.idx  Bucket.cpp.A53BC1CC3DC3B60A.idx  Bucket.cpp.D7D7B07FC15F7F4D.idx  Bucket.hpp.5DE4529960D23259.idx  Bucket.hpp.FFA4C2FBEC54153F.idx  DID_Map.cpp.403AAF5000B8B3C6.idx  DID_Map.cpp.E692C4C69FC3B298.idx  DID_Map.hpp.6C4E0A6A6B47CFC8.idx  DID_Map.hpp.DEA8571611FA8D59.idx  Enclave.cpp.2ADE3277BB74DC3D.idx  Enclave.cpp.4D4CE17ACD3B6C4B.idx  ORAMTree.cpp.31EE120450685DCA.idx  ORAMTree.cpp.92585A8979248DDF.idx  ORAMTree.hpp.A366B17EAD159F23.idx  ORAMTree.hpp.C4D25D40F2A32AC4.idx  ORAM_Interface.hpp.AE51C72E109AAB95.idx  ORAM_Interface.hpp.E06FB8CB76213680.idx  Oblivira.cpp.989D67DA849B271A.idx  Oblivira_v2.cpp.AC4612A234E5AF9D.idx  PathORAM.cpp.36BC06E25E9B4A67.idx  PathORAM.cpp.88B63F7C4F2A887B.idx  PathORAM.hpp.523923C1D5AFDA9B.idx  PathORAM.hpp.E9A1DFB24472BAA9.idx  SafeQueue.h.142CAB1CE13EA71C.idx  ServiceServer.cpp.E2AC7724BA0AFA94.idx  ServiceServer.h.2FFE03972C458FCE.idx  Stash.cpp.6A57B516D2E5A5D6.idx  Stash.cpp.88A11702FC9622F9.idx  Stash.hpp.6F64D79D267FCEF7.idx  Stash.hpp.AA2FAE82529052FC.idx  ThreadPool.h.B5D662B6F130B59C.idx  benchmark.h.E76BAFECA7E16456.idx  certs_test.h.500881546B7FB96F.idx  certs_test.h.890412F0B979B3F1.idx  debug.h.14E43009C597D6FE.idx  global_config.h.E2064103AA445B3F.idx  json.h.E4C36E0B79F3E34B.idx  (+32 more)
App/: .gitignore  CMakeLists.txt  Oblivira.cpp  Oblivira.h  Oblivira_v2.cpp  SafeQueue.h  ServiceServer.cpp  ServiceServer.h  TestApp.cpp  certs_test.h  debug.h  jsoncpp.cpp  localstorage.cpp  ocalls.cpp  sgx_init.cpp  sgx_init.h
App/include/: config.hh
App/include/ServiceServer/: ServiceServer.h
App/include/localstorage/: localstorage.hh
App/include/sgx/: sgx_init.hh
App/src/: Oblivira.cpp
App/src/ServiceServer/: ServiceServer.cpp
App/src/localstorage/: localstorage.cc
App/src/sgx/: ocalls.cc  sgx_init.cc
Enclave/: CMakeLists.txt  Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.h  PathORAM.edl  __certs_test.h  certs_test.h  ssl.cpp  ssl.h  utils.cpp  utils.h  wolfssl.edl
Enclave/ORAM/: Block.cpp  Block.hpp  Bucket.cpp  Bucket.hpp  DID_Map.cpp  DID_Map.hpp  ORAMTree.cpp  ORAMTree.hpp  ORAM_Interface.hpp  PathORAM.cpp  PathORAM.hpp  Stash.cpp  Stash.hpp  oasm_lib.h  oblivious_functions.asm  oram_utils.cpp  oram_utils.hpp
Enclave/include/PathORAM/: Block.hpp  Bucket.hpp  ORAMTree.hpp  PathORAM.hpp  Stash.hpp  oasm_lib.h  oram_utils.hpp
Enclave/include/utils/: utils.hh
Enclave/include/wolfssl-enc/: testenclave.hh  wolfssl_utils.hh
Enclave/sgx/: Enclave.config.xml
Enclave/sgx/edl/: Enclave.edl
Enclave/sgx/edl/wolfssl/: wolfssl.edl
Enclave/src/: Enclave.cpp
Enclave/src/PathORAM/: Block.cpp  Bucket.cpp  DID_Map.cpp  ORAMTree.cpp  PathORAM.cpp  Stash.cpp  oram_utils.cpp
Enclave/src/utils/: utils.cc
Enclave/src/wolfssl-enc/: testenclave.cc  wolfssl_enc.cpp  wolfssl_utils.cc
Enclave/tests/: missing_funcs.c
Include/: global_config.h
Lib/wolfssl/: wolfssl.edl
Lib/wolfssl/IDE/LINUX-SGX/: build.sh  sgx_t_static.mk
Lib/wolfssl/wolfssl/wolfcrypt/: asn_public.h  settings.h
Tests/: did-request-multi.sh  did-request-single.sh  docker-compose.yml  launch-ur.sh  response-time-bench.sh  send_directly_to_ion.sh
Tests/uni-resolver-driver-did-ion/: README.md
Tests/uni-resolver-driver-did-ion/src/: Connection.cs  Resolver.cs  Startup.cs  config.json
Tests/uni-resolver-driver-did-ion/src/Controllers/: IdentifiersController.cs
Tests/universal-resolver/: Dockerfile
Tests/universal-resolver/resolver/java/driver/src/main/java/uniresolver/driver/servlet/: PropertiesServlet.java  ResolveServlet.java
Tests/universal-resolver/resolver/java/uni-resolver-local/src/main/java/uniresolver/local/: LocalUniResolver.java
Tests/universal-resolver/resolver/java/uni-resolver-web/src/main/java/uniresolver/web/servlet/: PropertiesServlet.java  ResolveServlet.java
Tests/universal-resolver/resolver/java/uni-resolver-web/src/main/webapp/WEB-INF/: web.xml
Tests/universal-resolver/uni-resolver-web/src/main/webapp/WEB-INF/: web.xml
app/: TestApp.cpp
cmake/: FindSGX.cmake
enclave/: .gitignore  TestEnclave.cpp  TestEnclave.edl
enclave/tests/: threadstest.c
lib/wolfssl/: pre-commit.sh
lib/wolfssl/src/: internal.c
lib/wolfssl/wolfcrypt/src/: asn.c
lib/wolfssl/wolfssl/: internal.h
